base64算法包更新